Update tsconfigs; Update build paths

--- a/packages/conflagrate/package.json
+++ b/packages/conflagrate/package.json
@@ -2,8 +2,8 @@
     "name": "@candlelib/conflagrate",
     "version": "0.5.8",
     "description": "Node Tree Traversal Library",
-    "main": "./build/library/conflagrate.js",
-    "types": "./build/types/conflagrate.d.ts",
+    "main": "./build/conflagrate.js",
+    "types": "./build/conflagrate.d.ts",
     "type": "module",
     "repository": "https://github.com/CandleLibrary/conflagrate",
     "author": "Anthony C Weathersby",
