--- a/packages/hydrocarbon/package.json
+++ b/packages/hydrocarbon/package.json
@@ -2,11 +2,11 @@
     "name": "@candlelib/hydrocarbon",
     "version": "0.15.4",
     "description": "Parser Compiler",
-    "main": "./build/library/entry/runtime.js",
-    "types": "./build/types/entry/runtime.d.ts",
+    "main": "./build/entry/runtime.js",
+    "types": "./build/entry/runtime.d.ts",
     "type": "module",
     "scripts": {
-        "prepublishOnly": "rm -rf ./build/library && rm -rf ./build/types && tsc & sleep 20",
+        "prepublishOnly": "rm -rf ./build && rm -rf ./build && tsc & sleep 20",
         "test": "candle.cure --threads 2 ./test/",
         "test.hcg_grammar_parser": "candle.cure ./test/bootstrap/hcg3-bootstrap.spec.js",
         "compile.skribble.debug": "./source/cli/cli.js compile --workers 10 --annotations --recognizer_type js --output_dir ./source/typescript/parsers/ ./source/grammars/misc/skribble.hcg",
