--- a/packages/cure/tsconfig.json
+++ b/packages/cure/tsconfig.json
@@ -1,31 +1,11 @@
 {
-    "compileOnSave": true,
+    "extends": "../tsconfig.json",
     "include": [
         "./source/typescript/**/*.ts"
     ],
     "compilerOptions": {
-        "types": [
-            "@types/node"
-        ],
-        "allowJs": true,
-        "baseUrl": "./",
-        "alwaysStrict": true,
-        "target": "ESNext",
-        "lib": [
-            "ESNEXT",
-            "ES2020",
-            "DOM"
-        ],
-        "removeComments": true,
+        "target": "ES2020",
         "rootDir": "./source/typescript/",
-        "module": "ESNext",
-        "outDir": "./build/library",
-        "declarationDir": "./build/types",
-        "declaration": true,
-        "moduleResolution": "node",
-        "allowSyntheticDefaultImports": true,
-        "sourceMap": true,
-        "inlineSources": true,
-        "skipLibCheck": true
+        "outDir": "./build/",
     }
 }
