--- a/packages/js/tsconfig.json
+++ b/packages/js/tsconfig.json
@@ -1,24 +1,11 @@
 {
-    "compileOnSave": true,
+    "extends": "../tsconfig.json",
     "include": [
         "./source/typescript/**/*"
     ],
     "compilerOptions": {
-        "types": [
-            "@types/node"
-        ],
-        "allowJs": true,
-        "baseUrl": "./",
-        "alwaysStrict": true,
         "target": "ES2020",
-        "lib": [
-            "ES2020",
-            "DOM"
-        ],
-        "outDir": "./build/library",
-        "declarationDir": "./build/types",
-        "declaration": true,
-        "moduleResolution": "node",
-        "skipLibCheck": true
+        "rootDir": "./source/typescript/",
+        "outDir": "./build/",
     }
 }
