--- a/packages/lantern/tsconfig.json
+++ b/packages/lantern/tsconfig.json
@@ -1,26 +1,11 @@
 {
-  "compileOnSave": true,
+  "extends": "../tsconfig.json",
   "include": [
     "./source/typescript/**/*"
   ],
   "compilerOptions": {
-    "types": [
-      "@types/node"
-    ],
-    "allowJs": true,
-    "baseUrl": "./",
-    "alwaysStrict": true,
     "target": "ES2020",
-    "lib": [
-      "ES2020",
-    ],
-    "allowSyntheticDefaultImports": true,
-    "module": "ESNext",
-    "outDir": "./build/library",
-    "declarationDir": "./build/types",
-    "declaration": true,
-    "moduleResolution": "node",
-    "sourceMap": true,
-    "skipLibCheck": true
+    "rootDir": "./source/typescript/",
+    "outDir": "./build/",
   }
 }
