--- a/packages/spark/tsconfig.json
+++ b/packages/spark/tsconfig.json
@@ -1,22 +1,11 @@
 {
-    "compileOnSave": true,
-    "files": [
-        "source/typescript/spark.ts"
+    "extends": "../tsconfig.json",
+    "include": [
+        "./source/typescript/**/*"
     ],
     "compilerOptions": {
-        "types": [],
-        "allowJs": true,
-        "baseUrl": "./",
-        "alwaysStrict": true,
         "target": "ES2020",
-        "lib": [
-            "ES2020",
-            "DOM"
-        ],
-        "outDir": "./build/library",
-        "declarationDir": "./build/types",
-        "declaration": true,
-        "moduleResolution": "node",
-        "module": "ESNext"
+        "rootDir": "./source/typescript/",
+        "outDir": "./build/",
     }
 }
