--- a/packages/wind/tsconfig.json
+++ b/packages/wind/tsconfig.json
@@ -1,22 +1,11 @@
 {
-    "compileOnSave": true,
+    "extends": "../tsconfig.json",
     "include": [
         "./source/typescript/**/*"
-, "source/nodejs"    ],
-    "exclude": [
-        "source/nodejs/*"
     ],
     "compilerOptions": {
-        "types": [],
-        "allowJs": true,
-        "baseUrl": "./",
-        "alwaysStrict": true,
         "target": "ES2020",
-        "lib": [
-            "ES2020"
-        ],
-        "outDir": "./build/library",
-        "declarationDir": "./build/types",
-        "declaration": true
+        "rootDir": "./source/typescript/",
+        "outDir": "./build/",
     }
 }
