--- a/packages/uri/tsconfig.json
+++ b/packages/uri/tsconfig.json
@@ -1,11 +1,11 @@
 {
     "extends": "../tsconfig.json",
     "include": [
-        "./source/typescript/**/*"
+        "./source/**/*"
     ],
     "compilerOptions": {
         "target": "ES2020",
-        "rootDir": "./source/typescript/",
+        "rootDir": "./source/",
         "outDir": "./build/",
     }
 }
