Update package.json: Add version script

--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
 	"name": "@candlelib/workspace",
 	"version": "1.0.0",
+	"scripts": {
+		"version_ts_packages": "npx candle.dev version @candlelib/workspace"
+	},
 	"workspaces": [
 		"packages/*"
 	],
