--- a/packages/wick/package.json
+++ b/packages/wick/package.json
@@ -9,12 +9,7 @@
         "candle.wick": "./index.js"
     },
     "scripts": {
-        "prepublishOnly": "rm -rf ./build && tsc & sleep 10",
-        "compile": "./scripts/compile.sh",
-        "test": "candle.cure  --headless ./test/* && candle.wick test ./test/",
-        "test.watch": "candle.cure -w ./test/*",
-        "server": "lantern",
-        "buildsite": "npm install && candle.wick compile --output ./www ./site"
+        "test": "candle.cure ./test/*"
     },
     "repository": {
         "type": "git",
