Restore test script

--- a/packages/cure/package.json
+++ b/packages/cure/package.json
@@ -9,7 +9,7 @@
         "candle.cure": "./index.js"
     },
     "scripts": {
-        "test": "candle.cure ./test/",
+        "test": "node ./build/bin/cli.js --reporter=ci ./test/",
         "test.watch": "candle.cure -w --threads=2 ./test/"
     },
     "repository": {
