--- a/packages/paraffin/package.json
+++ b/packages/paraffin/package.json
@@ -14,7 +14,7 @@
         "test-wickurse": "node ./test/composite.practical.spec.js",
         "prepublishOnly": "rm -rf ./build && tsc & sleep 10",
         "build-colors": "./utils/build_colors.js",
-        "test": "candle.cure ./tests/",
+        "test": "candle.cure --reporter ci ./tests/",
         "compile.terminfo.debug": "hydrocarbon compile --nom terminfo_parser --output_dir ./source/typescript/parser/ --annotations --debug  ./source/grammar/terminfo.hcg",
         "compile.terminfo.release": "hydrocarbon compile --nom terminfo_parser --output_dir ./source/typescript/parser/ --recognizer_type wasm  ./source/grammar/terminfo.hcg",
         "compile.debug": "hydrocarbon compile --type ts --output ./source/typescript/parser/args_parser ./source/grammar/args_parser.hcg",
