--- a/packages/css/package.json
+++ b/packages/css/package.json
@@ -7,7 +7,7 @@
     "types": "./build/css.d.ts",
     "scripts": {
         "prepublishOnly": "rm -rf ./build && tsc & sleep 10",
-        "test": "candle.cure ./test/",
+        "test": "candle.cure --reporter ci ./test/",
         "test.watch": "candle.cure -w ./test/**",
         "compile": "hydrocarbon compile --threads 5 --out_path ./source/typescript/parser/parser_new.ts --recognizer ts ./source/grammar/css.hcg"
     },
