--- a/packages/js/package.json
+++ b/packages/js/package.json
@@ -7,7 +7,7 @@
     "type": "module",
     "scripts": {
         "prepublishOnly": "rm -rf ./build && tsc & sleep 10",
-        "test": "candle.cure ./test/",
+        "test": "candle.cure --reporter ci ./test/",
         "test.watch": "candle.cure -w ./test/candlelibrary.js.spec.js",
         "build": "tsc",
         "compile": "./scripts/compile.sh"
