--- a/packages/lantern/package.json
+++ b/packages/lantern/package.json
@@ -10,7 +10,7 @@
     },
     "scripts": {
         "prepublishOnly": "rm -rf ./build && tsc & sleep 10",
-        "test": "candle.cure --headless ./test/",
+        "test": "candle.cure --headless --reporter ci ./test/",
         "test.watch": "candle.cure -w ./test/**"
     },
     "repository": {
