Replace `build/library` with `build`

--- a/packages/hydrocarbon/package.json
+++ b/packages/hydrocarbon/package.json
@@ -17,8 +17,7 @@
         "url": "git+https://github.com/CandleLibrary/Hydrocarbon.git"
     },
     "files": [
-        "/build/types",
-        "/build/library",
+        "/build",
         "/README.md",
         "/CHANGELOG.md",
         "/LICENSE",
