--- a/packages/cure/package.json
+++ b/packages/cure/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@candlelib/cure",
-    "version": "0.7.1",
+    "version": "0.7.3",
     "description": "Testing Framework",
     "type": "module",
     "types": "./build/cure.d.ts",
@@ -9,15 +9,8 @@
         "candle.cure": "./index.js"
     },
     "scripts": {
-        "prepublishOnly": "rm -rf ./build && tsc & sleep 10",
-        "test": "node ./build/bin/cli.js --headless --threads=2 --reporter=ci ./test/",
-        "test.watch": "candle.cure -w --threads=2 ./test/",
-        "build.watch": "tsc --watch",
-        "build": "tsc -p ./tsconfig.json",
-        "compile.testy_parser.debug": "hydrocarbon compile --nom testy_parser --workers 10 --output_dir ./build/utilities/ --annotations --debug  ./source/grammar/testy.hcg",
-        "compile.testy_parser.release": "hydrocarbon compile --nom testy_parser --workers 10 --output_dir ./source/typescript/utilities/ --recognizer_type wasm  ./source/grammar/testy.hcg",
-        "compile.st_parser.debug": "hydrocarbon compile --workers 10 --output_dir ./build/utilities/ --annotations --debug  ./source/grammar/stack_trace_parser.hcg",
-        "compile.st_parser.release": "hydrocarbon compile --workers 10 --output_dir ./source/typescript/utilities/ --recognizer_type wasm  ./source/grammar/stack_trace_parser.hcg"
+        "test": "node ./build/bin/cli.js --reporter=ci ./test/",
+        "test.watch": "candle.cure -w --threads=2 ./test/"
     },
     "repository": {
         "type": "git",
@@ -33,14 +26,14 @@
     "author": "Anthony Weathersby <acweathersby.codes+candlelib@gmail.com>",
     "license": "MIT",
     "dependencies": {
-        "@candlelib/conflagrate": "*",
+        "@candlelib/conflagrate": "0.5.10",
         "@candlelib/hydrocarbon": "*",
-        "@candlelib/js": "*",
-        "@candlelib/paraffin": "*",
-        "@candlelib/spark": "*",
-        "@candlelib/uri": "*",
-        "@candlelib/wind": "*",
-        "@candlelib/log": "*",
+        "@candlelib/js": "0.5.26",
+        "@candlelib/paraffin": "0.1.26",
+        "@candlelib/spark": "0.3.6",
+        "@candlelib/uri": "0.3.4",
+        "@candlelib/wind": "0.5.6",
+        "@candlelib/log": "0.3.2",
         "deep-equal": "^2.0.1"
     },
     "devDependencies": {
