--- a/packages/html/package.json
+++ b/packages/html/package.json
@@ -1,12 +1,11 @@
 {
     "name": "@candlelib/html",
-    "version": "0.2.5",
+    "version": "0.2.7",
     "description": "HTML Parser and DOM Polyfill",
     "main": "./build/html.js",
     "types": "./build/html.d.ts",
     "type": "module",
     "scripts": {
-        "prepublishOnly": "rm -rf ./build && tsc & sleep 10",
         "test": "candle.cure --reporter ci ./test/**",
         "test.watch": "candle.cure -w ./test/**"
     },
@@ -31,8 +30,8 @@
     },
     "homepage": "https://github.com/candlelibrary/html#readme",
     "dependencies": {
-        "@candlelib/uri": "*",
-        "@candlelib/wind": "*"
+        "@candlelib/uri": "0.3.4",
+        "@candlelib/wind": "0.5.6"
     },
     "devDependencies": {
         "@candlelib/cure": "*"
