--- a/packages/spark/package.json
+++ b/packages/spark/package.json
@@ -1,13 +1,12 @@
 {
     "name": "@candlelib/spark",
-    "version": "0.3.4",
+    "version": "0.3.6",
     "description": "Simple Task Scheduler",
-    "main": "build/library/spark.js",
-    "types": "build/types/spark.d.ts",
+    "main": "build/spark.js",
+    "types": "build/spark.d.ts",
     "type": "module",
     "scripts": {
-        "prepublishOnly": "rm -rf ./build && tsc & sleep 10",
-        "test": "tsc -p ./tsconfig.json"
+        "test": "true"
     },
     "repository": {
         "type": "git",
