--- a/packages/css/package.json
+++ b/packages/css/package.json
@@ -1,13 +1,12 @@
 {
     "name": "@candlelib/css",
-    "version": "0.3.18",
+    "version": "0.3.20",
     "type": "module",
     "description": "CSS Parsing & Editing Tools",
     "main": "./build/css.js",
     "types": "./build/css.d.ts",
     "scripts": {
-        "prepublishOnly": "rm -rf ./build && tsc & sleep 10",
-        "test": "candle.cure ./test/",
+        "test": "candle.cure --reporter ci ./test/",
         "test.watch": "candle.cure -w ./test/**",
         "compile": "hydrocarbon compile --threads 5 --out_path ./source/typescript/parser/parser_new.ts --recognizer ts ./source/grammar/css.hcg"
     },
@@ -32,9 +31,9 @@
     },
     "homepage": "https://github.com/candlelibrary/css#readme",
     "dependencies": {
-        "@candlelib/conflagrate": "*",
+        "@candlelib/conflagrate": "0.5.10",
         "@candlelib/hydrocarbon": "*",
-        "@candlelib/uri": "*"
+        "@candlelib/uri": "0.3.4"
     },
     "devDependencies": {
         "@candlelib/cure": "*",
