--- a/packages/uri/package.json
+++ b/packages/uri/package.json
@@ -1,15 +1,14 @@
 {
     "name": "@candlelib/uri",
-    "version": "0.3.2",
+    "version": "0.3.4",
     "description": "URL/URI parser and basic request handler.",
     "main": "./build/uri.js",
     "types": "./build/uri.d.ts",
     "type": "module",
     "scripts": {
-        "test": "candle.cure ./test/",
+        "test": "candle.cure --reporter ci ./test/",
         "test.watch": "candle.cure -w ./test/**",
-        "build": "./bin/cfw_test.js ./load_test.spec.js",
-        "prepublishOnly": "rm -rf ./build && tsc & sleep 5"
+        "build": "./bin/cfw_test.js ./load_test.spec.js"
     },
     "repository": {
         "type": "git",
