--- a/packages/wind/package.json
+++ b/packages/wind/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@candlelib/wind",
-    "version": "0.5.4",
+    "version": "0.5.6",
     "description": "Tokenizer",
     "main": "./build/wind.js",
     "types": "./build/wind.d.ts",
@@ -10,9 +10,8 @@
     },
     "scripts": {
         "test.watch": "candle.cure -w ./test/**",
-        "test": "candle.cure ./test/**",
-        "build.table": "node ./source/nodejs/build_unicode_tables.node.js",
-        "prepublishOnly": "rm -rf ./build && tsc & sleep 10"
+        "test": "candle.cure --reporter ci ./test/**",
+        "build.table": "node ./source/nodejs/build_unicode_tables.node.js"
     },
     "repository": {
         "type": "git",
