--- a/packages/wick/package.json
+++ b/packages/wick/package.json
@@ -2,8 +2,8 @@
     "name": "@candlelib/wick",
     "version": "0.16.1",
     "description": "Web Component Compiler",
-    "main": "./build/entry/wick-server.js",
-    "types": "./build/entry/wick-server",
+    "main": "./build/index.js",
+    "types": "./build/index",
     "type": "module",
     "bin": {
         "candle.wick": "./index.js"
