Add module loading in tests; Re-organize files (separate wrkspc dispatchers)
#changelog

Enable loading of import .ts modules in tests

--- a/packages/wick/package.json
+++ b/packages/wick/package.json
@@ -65,6 +65,7 @@
         "@candlelib/spark": "*",
         "@candlelib/uri": "*",
         "@candlelib/wind": "*",
+        "@candlelib/lantern": "*",
         "ws": "^8.2.3",
         "@types/ws": "^8.2.0",
         "esbuild": "^0.13.15"
