--- a/packages/wick/package.json
+++ b/packages/wick/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@candlelib/wick",
-    "version": "0.17.0",
+    "version": "0.18.0",
     "description": "Web Component Compiler",
     "main": "./build/index.js",
     "types": "./build/index",
@@ -54,17 +54,18 @@
     },
     "dependencies": {
         "@candlelib/conflagrate": "0.5.12",
-        "@candlelib/css": "0.3.22",
-        "@candlelib/cure": "0.8.0",
-        "@candlelib/glow": "0.5.0",
+        "@candlelib/css": "0.3.23",
+        "@candlelib/cure": "0.8.1",
+        "@candlelib/glow": "0.5.1",
         "@candlelib/html": "0.2.9",
         "@candlelib/hydrocarbon": "*",
         "@candlelib/js": "0.5.28",
         "@candlelib/log": "0.3.4",
         "@candlelib/paraffin": "0.1.28",
-        "@candlelib/spark": "0.3.8",
+        "@candlelib/spark": "0.3.9",
         "@candlelib/uri": "0.3.6",
         "@candlelib/wind": "0.5.6",
+        "@candlelib/lantern": "0.2.12",
         "ws": "^8.2.3",
         "@types/ws": "^8.2.0",
         "esbuild": "^0.13.15"
